Solved issues with root scrollbar

--- a/src/front/styles/shared.sass
+++ b/src/front/styles/shared.sass
@@ -14,7 +14,6 @@ $red-base-color: #992828
         width: 10px
     &::-webkit-scrollbar-track
         background-color: $dark-gray-base-color
-        border-radius: 100px
     &::-webkit-scrollbar-thumb
         background-color: #a400ea65
         border-radius: 100px
